--- a/notescloud/app/static/main.css
+++ b/notescloud/app/static/main.css
@@ -13,7 +13,7 @@ h1, h2, h3, h4, h5, h6 {
 }
   
 .site-header .navbar-nav .nav-link {
-  color: #1f4922;
+  color: #122713;
 }
   
 .site-header .navbar-nav .nav-link:hover {
