--- a/notescloud/app/templates/layout.html
+++ b/notescloud/app/templates/layout.html
@@ -36,6 +36,7 @@
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {% if current_user.is_authenticated %}
+                        <a class="nav-item nav-link" href="{{url_for('new_post')}}">New Notes</a>
                         <a class="nav-item nav-link" href="{{url_for('account')}}">Account</a>
                         <a class="nav-item nav-link" href="{{url_for('logout')}}">Logout</a>
                         {% else %}
@@ -64,13 +65,14 @@
             </div>
             <div class="col-md-4">
                 <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
+                    <h3>Links</h3>
+                    <p class='text-muted'>Shortcuts to...
                     <ul class="list-group">
                         <li class="list-group-item list-group-item-light">Latest Notes</li>
+                        <a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
                         <li class="list-group-item list-group-item-light">Babson Canvas</li>
-                        <li class="list-group-item list-group-item-light">Babson Portal</li>
                         <li class="list-group-item list-group-item-light">Tutor Center</li>
+                        <li class="list-group-item list-group-item-light">Writing Center</li>
                     </ul>
                     </p>
                 </div>
