--- a/notescloud/app/templates/layout.html
+++ b/notescloud/app/templates/layout.html
@@ -65,14 +65,21 @@
             </div>
             <div class="col-md-4">
                 <div class="content-section">
-                    <h3>Links</h3>
+                    <h3>Need Help?</h3>
                     <p class='text-muted'>Shortcuts to...
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Latest Notes</li>
-                        <a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
-                        <li class="list-group-item list-group-item-light">Babson Canvas</li>
-                        <li class="list-group-item list-group-item-light">Tutor Center</li>
-                        <li class="list-group-item list-group-item-light">Writing Center</li>
+                        <a class="list-group-item list-group-item-light" href="https://canvasdiscovery.babson.edu/"
+                            target="_blank">Babson Canvas</a>
+                        <a class="list-group-item list-group-item-light"
+                            href="https://fusionmx.babson.edu/Fusebox/index.cfm?method=Auth.ShowLoginForm&showHeader=false&babsonauth_home=https%3A%2F%2Ffusionmx%2Ebabson%2Eedu%2FFusebox%2Findex%2Ecfm%3Fmethod%3DAuth%2ERedirectToHub"
+                            target="_blank">Babson Portal</a>
+                        <a class="list-group-item list-group-item-light" href="https://babson.mywconline.net/"
+                            target="_blank">Spark Tutor</a>
+                        <a class="list-group-item list-group-item-light" href="https://babson.mywconline.com/"
+                            target="_blank">Writing Center</a>
+                        <a class="list-group-item list-group-item-light"
+                            href="https://ssoeasy.babson.edu/LoginFormIdentityProvider/Login.aspx?ReturnUrl=%2fLoginFormIdentityProvider%2fDefault.aspx"
+                            target="_blank">Academic Services</a>
                     </ul>
                     </p>
                 </div>
