--- a/notescloud/app/templates/about.html
+++ b/notescloud/app/templates/about.html
@@ -1,3 +1,6 @@
+<!-- Customize the about page based on basic layout desgin -->
+<!-- import layout.html desgin -->
+
 {% extends "layout.html" %}
 {%  block content %}
 <h1>About Page</h1>
@@ -10,14 +13,15 @@
 
 <!DOCTYPE html>
 <html lang="en">
+<!-- Import header names from back end python code -->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
-    <title>Flask Blog - {{title}}</title>
+    <title>Babson Notes Cloud - {{title}}</title>
     {% else %}
-    <title>Flask Blog</title>
+    <title>Babson Notes Cloud</title>
     {% endif %}
 </head>
 
