--- a/notescloud/app/templates/account.html
+++ b/notescloud/app/templates/account.html
@@ -1,7 +1,12 @@
+<!-- Customize the account page based on basic layout desgin -->
+<!-- import layout.html desgin -->
+<!-- Credit: code template from Github -->
+
 {% extends "layout.html" %}
 {% block content %}
 <div class="content-section">
     <div class="media">
+        <!-- profile pic design -->
         <img class="rounded-circle account-img" src="{{ image_file }}">
         <div class="media-body">
             <h2 class="account-heading">{{ current_user.username }}</h2>
