--- a/notescloud/app/templates/about.html
+++ b/notescloud/app/templates/about.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <h4>This web app is designed by a Babson student who wishes help other Babson students.</h4>
+    <p>This web app is designed by a Babson student who wishes help other Babson students.</p>
 
 </body>
 
