--- a/notescloud/app/templates/about.html
+++ b/notescloud/app/templates/about.html
@@ -26,6 +26,8 @@
 </head>
 
 <body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <p>This web app is designed by a Babson student who wishes help other Babson students.</p>
 
 </body>
