--- a/notescloud/app/templates/account.html
+++ b/notescloud/app/templates/account.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="content-section">
     <div class="media">
-        <!-- profile pic design -->
+        <!-- profile pic design showing on the left as account info -->
         <img class="rounded-circle account-img" src="{{ image_file }}">
         <div class="media-body">
             <h2 class="account-heading">{{ current_user.username }}</h2>
@@ -16,10 +16,10 @@
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Account Info</legend>
+
+            <!-- display error if the account name entered does not meet standards -->
             <div class="form-group">
                 {{ form.username.label(class="form-control-label") }}
-
                 {% if form.username.errors %}
                 {{ form.username(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
@@ -31,6 +31,7 @@
                 {{ form.username(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+            <!-- display error if the email entered does not meet standards -->
             <div class="form-group">
                 {{ form.email.label(class="form-control-label") }}
                 {% if form.email.errors %}
@@ -44,6 +45,7 @@
                 {{ form.email(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+            <!-- upload new profile pic -->
             <div class="form-group">
                 {{ form.picture.label() }}
                 {{ form.picture(class="form-control-file") }}
@@ -54,6 +56,7 @@
                 {% endif %}
             </div>
         </fieldset>
+        <!-- create submit button -->
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
