--- a/notescloud/app/templates/create_post.html
+++ b/notescloud/app/templates/create_post.html
@@ -1,10 +1,14 @@
+<!-- Customize the new post page based on basic layout desgin -->
+<!-- import layout.html desgin -->
+
 {% extends "layout.html" %}
 {%  block content %}
+<!-- area to enter new note title -->
 <div class="content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">{{legend}}</legend>
+
             <div class="form-group">
                 {{ form.title.label(class="form-control-label") }}
                 {% if form.title.errors %}
@@ -18,6 +22,7 @@
                 {{ form.title(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+            <!-- area to enter new note content -->
             <div class="form-group">
                 {{ form.content.label(class="form-control-label") }}
                 {% if form.content.errors %}
@@ -33,6 +38,7 @@
             </div>
 
         </fieldset>
+        <!-- post btn -->
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
