--- a/notescloud/app/templates/layout.html
+++ b/notescloud/app/templates/layout.html
@@ -41,10 +41,13 @@
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
+                        <!-- jinja 2 conditional to check -->
+                        <!-- will be able to post new notes, update account or logout if authenticated -->
                         {% if current_user.is_authenticated %}
                         <a class="nav-item nav-link" href="{{url_for('posts.new_post')}}">New Notes</a>
                         <a class="nav-item nav-link" href="{{url_for('users.account')}}">Account</a>
                         <a class="nav-item nav-link" href="{{url_for('users.logout')}}">Logout</a>
+                        <!-- show login and register routes if not authenticated -->
                         {% else %}
                         <a class="nav-item nav-link" href="{{url_for('users.login')}}">Login</a>
                         <a class=" nav-item nav-link" href="{{url_for('users.register')}}">Register</a>
