--- a/notescloud/app/templates/login.html
+++ b/notescloud/app/templates/login.html
@@ -4,7 +4,8 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Log In</legend>
+
+            <!-- Area to enter email for login -->
             <div class="form-group">
                 {{ form.email.label(class="form-control-label") }}
                 {% if form.email.errors %}
@@ -18,6 +19,7 @@
                 {{ form.email(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+            <!-- Area to enter password for login -->
             <div class="form-group">
                 {{ form.password.label(class="form-control-label") }}
                 {% if form.password.errors %}
@@ -31,11 +33,13 @@
                 {{ form.password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+            <!-- Remember me check box to skip future login -->
             <div class="form-check">
                 {{ form.remember(class="form-check-input") }}
                 {{ form.remember.label(class="form-check-label") }}
             </div>
         </fieldset>
+        <!-- login btn -->
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
             <small class="text-muted ml-2">
@@ -45,6 +49,7 @@
 
     </form>
 </div>
+<!-- redirect to sign up if the user does not have an account -->
 <div class="border-top pt-3">
     <small class="text-muted">
         Need An Account? <a class="ml-2" href="{{ url_for('users.register') }}">Sign Up Now</a>
