--- a/notescloud/app/templates/post.html
+++ b/notescloud/app/templates/post.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
 <article class="media content-section">
+    <!-- show the author's profile pic beside the note -->
     <img class="rounded-circle article-img"
         src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
+    <!-- display the note -->
     <div class="media-body">
         <div class="article-metadata">
             <a class="mr-2"
