--- a/notescloud/app/templates/register.html
+++ b/notescloud/app/templates/register.html
@@ -4,10 +4,9 @@
     <form method="POST" action="">
         {{form.hidden_tag()}}
         <fieldset calss=" form-group">
-            <legend class="border-bottom mb-4">Join Today</legend>
+            <!-- username enter box -->
             <div class="form-group">
                 {{form.username.label(class = "form-control-label")}}
-
                 {% if form.username.errors %}
                 {{form.username(class="form-control form-control-lg is-invalid")}}
                 <div class="invalid-feedback">
@@ -19,6 +18,7 @@
                 {{form.username(class = "form-control form-control-lg")}}
                 {% endif %}
             </div>
+            <!-- user email enter box -->
             <div class="form-group">
                 {{form.email.label(class = "form-control-label")}}
                 {% if form.email.errors %}
@@ -32,6 +32,7 @@
                 {{form.email(class = "form-control form-control-lg")}}
                 {% endif %}
             </div>
+            <!-- password enter box -->
             <div class="form-group">
                 {{form.password.label(class = "form-control-label")}}
                 {% if form.password.errors %}
@@ -45,6 +46,7 @@
                 {{form.password(class = "form-control form-control-lg")}}
                 {% endif %}
             </div>
+            <!-- confirm password enter box -->
             <div class="form-group">
                 {{form.confirm_password.label(class = "form-control-label")}}
                 {% if form.confirm_password.errors %}
@@ -59,6 +61,7 @@
                 {% endif %}
             </div>
         </fieldset>
+        <!-- sign up btn -->
         <div class='form-group'>
             {{form.submit(class='btn btn-outline-info')}}
         </div>
