--- a/notescloud/app/templates/reset_token.html
+++ b/notescloud/app/templates/reset_token.html
@@ -6,6 +6,7 @@
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Reset Password</legend>
+            <!-- password -->
             <div class="form-group">
                 {{ form.password.label(class="form-control-label") }}
                 {% if form.password.errors %}
@@ -20,6 +21,7 @@
                 {{ form.password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+            <!-- confirm password -->
             <div class="form-group">
                 {{ form.confirm_password.label(class="form-control-label") }}
                 {% if form.confirm_password.errors %}
